@@ -8,6 +8,8 @@
       Omission of the automatic prefix.
   BF: Build: Correction of release
       Release file (zip) was not overwritten if already exists.
+  BF: Service: Uniform use of the GMT time zone
+      changes: Storage-Last-Modified / Storage-Expiration
   CR: Service: Added directives for XPath
       Directives are added at the end of the XPath separated by exclamation marks (!).
   CR: Service: Added the directive JSON
